--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,5 +3,9 @@ jobs:
   build:
     docker:
       - image: circleci/golang:1.11.2
+    working_directory: /go/src/github.com/kairintyo/circle-ci-test
     steps:
-      - run: echo "hello world"
+      - checkout
+
+      - run: go get -v -t -d ./...
+      - run: go test -v ./...
