--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,4 @@ jobs:
 
       - run: go get -v -t -d ./...
       - run: go test -v ./...
-
-      - slack/status:
-        success_message: 'Success!'
-        failure_message: 'failure!'
-        webhook: "${SLACK_WEBHOOK}"
+      - slack/status
